[FIX]sap.ui.unified.Calendar: Align calendar header in horizon theme
BCP: 2370070377

--- a/src/themelib_sap_horizon/src/sap/ui/unified/themes/sap_horizon/Calendar.less
+++ b/src/themelib_sap_horizon/src/sap/ui/unified/themes/sap_horizon/Calendar.less
@@ -294,6 +294,10 @@ html.sap-desktop .sapUiCalItemSel:not(.sapUiCalItemNow):not(.sapUiCalItemSelBetw
 	}
 }
 
+.sapUiSizeCompact .sapUiCalHead {
+	height: 2.25rem;
+}
+
 .sapUiCalItem {
 	position: relative;
 	&:focus > .sapUiCalItemText {
